# navaja-negra-2023

./: README.md  demo.py
compiling/cython/: demo.c
compiling/demo.build/: __constants.c  __constants.const  __constants.h  __constants.txt  __loader.c  build_definitions.h  ccache-21160.txt  module.__main__.c  module.__main__.const  scons-report.txt
compiling/demo.build/static_src/: CompiledFunctionType.c  MainProgram.c
compiling/demo.onefile-build/: ccache-21277.txt  onefile_definitions.h  scons-report.txt
compiling/demo.onefile-build/static_src/: OnefileBootstrap.c
custom-loader/: cheatsheet.md  demo.py  demo_hardware_signature.py  eloader.py  eloader_hardware.py  encryptor-hardware.py  encryptor.py  secret_library.py  secret_library.py.encrypted  secret_library.py.encrypted-hardware
custom-python-vm/: opcode-generator.py  opcode.shuffled.h  opcode_ids.h  opcode_ids.shuffled.h
nodejs_wasm/: cheatsheet.md  demo.js
obfuscation/: cheatsheet.md  demo.obfuscated.py  demo.py
packaging/pyinstaller/: demo.spec
packaging/shiv/: pyproject.toml
packaging/zip_file/: demo.zpp
pyinstaller/: chuleta.md  demo.spec
